--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -2,7 +2,12 @@
 
 {% block content %}
 
-    <p>Vous êtes connecté !</p>
+    <h2>Photos</h2>
+
+    {% for photo in photos %}
+        <img src="{{ photo.image.url }}">
+        <p>{{ photo.caption }}</p>
+    {% endfor %}
 
 {% endblock content %}
 
