--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,29 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>FotoBlog</title>
-</head>
-<body>
-    <h1>FotoBlog</h1>
+{% load static %}
+<html>
+    <head>
+        <title>FotoBlog</title>
+        <link rel="stylesheet" href="{% static 'app.css' %}">
+    </head>
+    <body>
+        <div class="sidebar">
 
+            <h1>FotoBlog</h1>
 
-     {% if user.is_authenticated %}
-        <p>Vous êtes connecté en tant que {{ request.user }}. <a href="{% url 'logout' %}"> Se déconnecter</a></p>
-    {% endif %}
-
-    {% block content %}
-
-    {% endblock content %}
-</body>
+            {% if user.is_authenticated %}
+                <p>Salut, {{ user }} !</p>
+                {% if user.profile_photo %}
+                    <img class="avatar" src={{ user.profile_photo.url }}>
+                {% else %}
+                    <img class="avatar" src="{% static 'images/default_profile.png'%}">
+                {% endif %}
+                <p><a href="{% url 'home' %}">Accueil</a></p>
+                <p><a href="{% url 'photo_upload' %}">Téléverser une photo</a></p>
+                <p><a href="{% url 'upload_profile_photo' %}">Changer la photo de profil</a></p>
+                <p><a href="{% url 'logout' %}">Se déconnecter</a></p>
+            {% endif %}
+        </div>
+        <div class="main">
+            {% block content %}{% endblock content %}
+        </div>
+    </body>
 </html>
